<resources>
    <string name="app_name">Door Men</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="technical_user">Worker</string>
    <string name="user">User</string>
    <string name="login_user">Login - User</string>
    <string name="login_partner">Login - Worker</string>
    <string name="login_driver">Login - Driver</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="not_an_account_register">Not an account? <u><b>Register</b></u></string>
    <string name="already_an_account_register">Already an Account? <u><b>Login</b></u></string>
    <string name="signup_user">SignUp - User</string>
    <string name="signup_worker">SignUp - Worker</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_number">Enter Number</string>
    <string name="please_fill_field">Please fill the fields</string>
    <string name="registering_user">Registering User..</string>
    <string name="permission_message">You need to enable all these permission to use the app,</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pick_a_location">Pick a Location</string>
    <string name="gps_seems_to_disable">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saving_location">Saving location…</string>
    <string name="cinic_image">Add your CNIC Image</string>
    <string name="pick_image_gallery">Pick Image from Gallery</string>
    <string name="photo_from_camera">Take Photo from Camera</string>
    <string name="select_action">Select Action</string>
    <string name="choose_all_options">Please choose all options</string>
    <string name="enter_cnic_number">Enter CNIC Number</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="authenticating_user">Authenticating user…</string>
    <string-array name="worker_array">
        <item>Worker Type</item>
        <!--        <item>Plumber</item>-->
        <item>Electrician</item>
        <!--        <item>Moter Repairer</item>-->
        <!--        <item>Refrigerator Repairer</item>-->
        <item>A/C Technician</item>
        <item>Carpenter</item>
        <!--        <item>Painter</item>-->
        <item>Barber</item>
        <!--        <item>Photography / Event</item>-->
        <!--        <item>Laundry</item>//home maintenance-->
        <!--        <item>CCTV Camera Installation</item> //other-->
    </string-array>
    <string-array name="driver_array">
        <item>Driver Type</item>
        <item>Luxury</item>
        <item>Economy</item>
        <item>Royal</item>
        <item>Bike</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="rates">Rates</string>
    <string name="bookings">Bookings</string>
    <string name="logout">Logout</string>
    <string name="plumber">Plumber</string>
    <string name="electrician">Electrician</string>
    <string name="ac_service">A/C Technician</string>
    <string name="carpenter">Carpenter</string>
    <string name="painter">Painter</string>
    <string name="laundry">Laundry</string>
    <string name="moter_repairing">Moter Repairing</string>
    <string name="refrigerator_repairing">Refrigerator Repairing</string>
    <string name="home_maintenance">Home Maintenance</string>
    <string name="home_appliance_repairs">Home Appliance Repairs</string>
    <string name="work_area">Work Area</string>
    <string name="proceed">Proceed</string>
    <string name="set_up_location">Set up Location</string>
    <string name="working_area">Working Area</string>
    <string name="finding_worker">Finding you a nearby worker..</string>
    <string name="finding_driver">Finding you a nearby driver..</string>
    <string name="request_for_work">Request for work</string>
    <string name="request_for_ride">Request for ride</string>
    <string name="requester_name">Requester Name</string>
    <string name="work_despcription">Work Despcription</string>
    <string name="work_location">Work Location</string>
    <string name="accept">Accept</string>
    <string name="accepting_request">Accepting  request..</string>
    <string name="gps_settings">GPS settings</string>
    <string name="do_you_want_to_go_to_setting">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="barber">Barber</string>
    <string name="photography_event">Photography / Event</string>
    <string name="no_worker_data_found">No Worker Data Found!</string>
    <string name="loading">Loading..</string>
    <string name="book_now">Book Now</string>
    <string name="service">Service</string>
    <string name="distance">Distance</string>
    <string name="work_to_be_done">Work to be Done</string>
    <string name="place_to_be_work">Place to be Work</string>
    <string name="your_location">Your Location</string>
    <string name="fare">Fare</string>
    <string name="start">Start</string>
    <string name="view_on_map">View on Map</string>
    <string name="on_the_way">On the Way</string>
    <string name="worker_name">Worker Name</string>
    <string name="worker_location">Worker Location</string>
    <string name="to_book_any_event_or_photography_from_below_list_contact_on_this_number">To book any event or photography from below list, Contact on this number:</string>
    <string name="_92317558327">+923175582327</string>
    <string name="end">End</string>
    <string name="ending_work">Ending Work…</string>
    <string name="note_as_we_work_on_your_requirements_and_details_provided_in_the_list_may_change_accorrding_to_demand_and_work">Note: As we work on your requirements and details provided in the list may change accorrding to demand and work.</string>
    <string name="view_sample"><b><u>View Sample</u></b></string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="update">Update</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="updating">Updating..</string>
    <string name="ac_inverter">A/C Inverter</string>
    <string name="ac_split">A/C Split</string>
    <string name="window_ac">Window A/C</string>
    <string name="standing_ac">Standing A/C</string>
    <string name="cast_ac">Cassette A/C</string>
    <string name="movie_hd">Movie Making (HD Quality)</string>
    <string name="movie_hr">Movie Making (High Resolution)</string>
    <string name="photo_shoot">Photo Shoot</string>
    <string name="events">Events</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="no_booking_found">No Booking Found!</string>
    <string name="wallet">Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="helpline">HelpLine</string>
    <string name="call">Call</string>
    <string name="driver">Driver</string>
    <string name="earn_by_becoming_a_driver">Earn by becoming a driver</string>
    <string name="earn_by_becoming_a_worker">Earn by becoming a worker</string>
    <string name="get_by_using_these_services">Get started by using services</string>
    <string name="signup_driver">SignUp - Driver</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_father_name">Enter Father Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_car_color">Enter Car Color</string>
    <string name="enter_car_number">Enter Car Number</string>
    <string name="enter_car_engine_number">Enter Car Engine Number</string>
    <string name="car_copy">Car Copy</string>
    <string name="license_image">License Image</string>
    <string name="enter_license_number">Enter License Number</string>
    <string name="book_ride">Book Ride</string>
    <string name="veh_cat">Ride Categories</string>
    <string name="go_mini">Economy</string>
    <string name="cost_you_less_and_save_your_time">Cost you less and save your time</string>
    <string name="bike">Bike</string>
    <string name="without_ac_but_ride_comfortably">Without AC but ride comfortably</string>
    <string name="go">Royal</string>
    <string name="a_great_ride_with_reasonable_price">A great ride with reasonable price</string>
    <string name="go_">Luxury</string>
    <string name="ride_big_with_comfortable_ride">Ride big with comfortable ride</string>
    <string name="where_you_want_to_go">Where you want to go?</string>
    <string name="confirm_dropoff">Confirm DropOff</string>
    <string name="confirm_pickup">Confirm PickUp</string>
    <string name="confirm_pickup_location">Confirm PickUp Location</string>
    <string name="confirm_ride">Confirm Ride</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_location">Driver Location</string>
    <string name="ending_ride">Ending Ride..</string>
    <string name="note_ride"><b>Note: </b> To book a ride you need to drag the marker in order to book the ride.</string>
    <string name="unable_to_sign_in">Login Failed! Please try again.</string>
    <string name="authentication_failed">Authentication Failed!</string>
    <string name="driver_s_number">Driver\'s Number</string>
    <string name="car_number">Car Number</string>
    <string name="car_color">Car Color</string>

</resources>