<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/Home" />
        <item
            android:id="@+id/ratesFragment"
            android:icon="@drawable/review"
            android:title="@string/rates" />
        <item
            android:id="@+id/bookingFragment"
            android:icon="@drawable/calendar"
            android:title="@string/bookings" />
    </group>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
</menu>