<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/colorBg"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/change_password"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/sq_box"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/_12ssp"
            tools:ignore="Deprecated" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/sq_box"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/_12ssp"
            tools:ignore="Deprecated" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateBtn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/update"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="@dimen/_10sdp"
            app:elevation="@dimen/_10sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="@dimen/_10sdp"
            app:elevation="@dimen/_10sdp" />
    </RelativeLayout>
</LinearLayout>