<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/request_for_work"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"

        android:text="@string/requester_name"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/requestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"

        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/work_despcription"

        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/workDesp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"

        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/work_location"

        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/workLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"

        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/distance"

        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/workDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"

        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="normal" />


</LinearLayout>