<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"

                android:text="@string/driver_name"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/requestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"

                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:text="@string/work_to_be_done"
                android:textColor="@color/colorText"

                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/workDesp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:text="@string/driver_location"

                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/workLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"

                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:text="@string/your_location"

                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/yourLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"

                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:text="@string/distance"

                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/workDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"

                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:text="@string/fare"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:textColor="@color/colorAccent"

                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/start"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/_10sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewMap"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/view_on_map"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_10sdp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>