<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_180sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10sdp"
            android:scaleType="centerInside"
            android:src="@drawable/loginfeature" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="26dp"
            android:paddingRight="24dp"
            tools:ignore="UselessParent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginTitle"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/enter_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress|textWebEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/enter_password"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minWidth="@dimen/_150sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="@dimen/_15sdp"
                app:strokeColor="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:visibility="gone"
                android:text="@string/forget_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/registerAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"

                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/not_an_account_register"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16ssp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>